--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <!-- Add skip link for screen reader users -->
-    <a href="#filter-options" class="skip-link">Skip to main content</a>
+    <button class="skip-link">Skip to main content</button>
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
