--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Add skip link for screen reader users -->
     <button class="skip-link">Skip to main content</button>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" tabindex="-1">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
