--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="Map"></div>
     </section>
     <section>
       <div class="filter-options">
